--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-This file was created by IntelliJ IDEA 10.0.2 for binding GitHub repository
+Grails Into Lunch'n'Learn at Genologics
+=======================================
+
+Ran through a quick example of using the different components of Grails for the Geno DEV team.
+
+"Grails Intro *.txt|odt" contain the agenda script that was followed.
